--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.32.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
